{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Action",
            "id": "40cfe7f0-8ea0-4eb3-bfaa-02162de8664c",
            "actions": [
                {
                    "name": "MoveZ",
                    "type": "Button",
                    "id": "77cf35a9-c985-4c52-901a-ff31c3b4d1fa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveX",
                    "type": "Button",
                    "id": "b55335ca-7f48-4a99-9389-84e3a86f7954",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Move",
                    "id": "41738e85-c7eb-4adc-bde3-3603ec9657c4",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveZ",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "2c5f91f0-ab53-40d7-9440-7e032de78722",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveZ",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "fb026ef6-67b1-4ade-a958-bb38fef827dc",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveZ",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Move",
                    "id": "c3e0b823-d753-4017-9c6f-575912fbd7b5",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveX",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "e942c01c-d58c-4b67-8fd3-48f2bc2c8dee",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveX",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "bbeb3c28-91a8-4c5d-859b-b428de5d4439",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveX",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}